--- a/test-output/old/Page Object test example/methods-alphabetical.html
+++ b/test-output/old/Page Object test example/methods-alphabetical.html
@@ -1,32 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Page Object test example</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bf8bb7">  <td>16/03/19 16:31:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.CheckwithViewProfile()[pri:0, instance:com.pp.tests.AccountSummaryTest@79b4d0f]">CheckwithViewProfile</td> 
-  <td>main@750044075</td>   <td></td> </tr>
-<tr bgcolor="bf8bb7">  <td>16/03/19 16:31:03</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.CheckwithViewProfileAndGettheSlots()[pri:0, instance:com.pp.tests.AccountSummaryTest@79b4d0f]">CheckwithViewProfileAndGettheSlots</td> 
-  <td>main@750044075</td>   <td></td> </tr>
-<tr bgcolor="63be87">  <td>16/03/19 16:31:03</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ComposeMessageTest.LoginAndClickonComposeMessage()[pri:0, instance:com.pp.tests.ComposeMessageTest@edf4efb]">LoginAndClickonComposeMessage</td> 
-  <td>main@750044075</td>   <td></td> </tr>
-<tr bgcolor="c6a873">  <td>16/03/19 16:31:03</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GenericAppointmentRequestTest.LoginAndRequestForAppointment()[pri:0, instance:com.pp.tests.GenericAppointmentRequestTest@3cda1055]">LoginAndRequestForAppointment</td> 
-  <td>main@750044075</td>   <td></td> </tr>
-<tr bgcolor="9b6d63">  <td>16/03/19 16:31:03</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithInvalidUsernameAndPassword()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">clickOnLoginWithInvalidUsernameAndPassword</td> 
-  <td>main@750044075</td>   <td></td> </tr>
-<tr bgcolor="9b6d63">  <td>16/03/19 16:31:03</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithValidCredentials()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">clickOnLoginWithValidCredentials</td> 
-  <td>main@750044075</td>   <td></td> </tr>
-<tr bgcolor="9b6d63">  <td>16/03/19 16:31:03</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnNeedHelpWithyourUsernamePassLink()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">clickOnNeedHelpWithyourUsernamePassLink</td> 
-  <td>main@750044075</td>   <td></td> </tr>
-<tr bgcolor="66c6b8">  <td>16/03/19 16:30:07</td>   <td>-55885</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@750044075</td>   <td></td> </tr>
-<tr bgcolor="9b6d63">  <td>16/03/19 16:31:03</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyAllReadyMembersElements()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">verifyAllReadyMembersElements</td> 
-  <td>main@750044075</td>   <td></td> </tr>
-<tr bgcolor="9b6d63">  <td>16/03/19 16:31:03</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyIamNewHereTestCase()[pri:0, instance:com.pp.tests.LoginPageTest@3fb6a447]">verifyIamNewHereTestCase</td> 
-  <td>main@750044075</td>   <td></td> </tr>
-<tr bgcolor="bf8bb7">  <td>16/03/19 16:31:03</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyMailMenuComposeMessage()[pri:0, instance:com.pp.tests.AccountSummaryTest@79b4d0f]">verifyMailMenuComposeMessage</td> 
-  <td>main@750044075</td>   <td></td> </tr>
-<tr bgcolor="bf8bb7">  <td>16/03/19 16:31:03</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyMailMenuOptions()[pri:0, instance:com.pp.tests.AccountSummaryTest@79b4d0f]">verifyMailMenuOptions</td> 
-  <td>main@750044075</td>   <td></td> </tr>
-<tr bgcolor="bf8bb7">  <td>16/03/19 16:31:03</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyMailMenuSentItems()[pri:0, instance:com.pp.tests.AccountSummaryTest@79b4d0f]">verifyMailMenuSentItems</td> 
-  <td>main@750044075</td>   <td></td> </tr>
-<tr bgcolor="bf8bb7">  <td>16/03/19 16:31:03</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyScheduleMenu()[pri:0, instance:com.pp.tests.AccountSummaryTest@79b4d0f]">verifyScheduleMenu</td> 
-  <td>main@750044075</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>16/05/04 15:11:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.CheckwithViewProfile()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">CheckwithViewProfile</td> 
+  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>16/05/04 15:11:45</td>   <td>18448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.CheckwithViewProfileAndGettheSlots()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">CheckwithViewProfileAndGettheSlots</td> 
+  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="9c9176">  <td>16/05/04 15:12:20</td>   <td>53015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ComposeMessageTest.LoginAndClickonComposeMessage()[pri:0, instance:com.pp.tests.ComposeMessageTest@43a25848]">LoginAndClickonComposeMessage</td> 
+  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="ceb1a5">  <td>16/05/04 15:13:11</td>   <td>104388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GenericAppointmentRequestTest.LoginAndRequestForAppointment()[pri:0, instance:com.pp.tests.GenericAppointmentRequestTest@30c7da1e]">LoginAndRequestForAppointment</td> 
+  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>16/05/04 15:07:28</td>   <td>-238490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithInvalidUsernameAndPassword()[pri:0, instance:com.pp.tests.LoginPageTest@19dfb72a]">clickOnLoginWithInvalidUsernameAndPassword</td> 
+  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>16/05/04 15:07:48</td>   <td>-218726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginWithValidCredentials()[pri:0, instance:com.pp.tests.LoginPageTest@19dfb72a]">clickOnLoginWithValidCredentials</td> 
+  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>16/05/04 15:07:37</td>   <td>-229866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnNeedHelpWithyourUsernamePassLink()[pri:0, instance:com.pp.tests.LoginPageTest@19dfb72a]">clickOnNeedHelpWithyourUsernamePassLink</td> 
+  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="6a99b2">  <td>16/05/04 15:06:58</td>   <td>-268882</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.LoginPageTest@19dfb72a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="6a99b2">  <td>16/05/04 15:08:47</td>   <td>-159665</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="6a99b2">  <td>16/05/04 15:12:06</td>   <td>38999</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.ComposeMessageTest@43a25848]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="6a99b2">  <td>16/05/04 15:12:58</td>   <td>91146</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestObject.setup()[pri:0, instance:com.pp.tests.GenericAppointmentRequestTest@30c7da1e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="6a99b2">  <td>16/05/04 15:08:47</td>   <td>-160109</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.LoginPageTest@19dfb72a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="6a99b2">  <td>16/05/04 15:12:05</td>   <td>38691</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="6a99b2">  <td>16/05/04 15:12:58</td>   <td>90824</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.ComposeMessageTest@43a25848]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="6a99b2">  <td>16/05/04 15:13:48</td>   <td>141276</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestObject.tearDown()[pri:0, instance:com.pp.tests.GenericAppointmentRequestTest@30c7da1e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>16/05/04 15:07:28</td>   <td>-238564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyAllReadyMembersElements()[pri:0, instance:com.pp.tests.LoginPageTest@19dfb72a]">verifyAllReadyMembersElements</td> 
+  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>16/05/04 15:07:18</td>   <td>-248653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyIamNewHereTestCase()[pri:0, instance:com.pp.tests.LoginPageTest@19dfb72a]">verifyIamNewHereTestCase</td> 
+  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>16/05/04 15:10:25</td>   <td>-61964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyMailMenuComposeMessage()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">verifyMailMenuComposeMessage</td> 
+  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>16/05/04 15:09:01</td>   <td>-145368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyMailMenuOptions()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">verifyMailMenuOptions</td> 
+  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>16/05/04 15:09:43</td>   <td>-103842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyMailMenuSentItems()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">verifyMailMenuSentItems</td> 
+  <td>main@1874154700</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>16/05/04 15:11:55</td>   <td>28538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSummaryTest.verifyScheduleMenu()[pri:0, instance:com.pp.tests.AccountSummaryTest@57829d67]">verifyScheduleMenu</td> 
+  <td>main@1874154700</td>   <td></td> </tr>
 </table>
